gitea/deploymentconfig-gitea.yaml
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    app: gitea
  name: gitea
spec:
  replicas: 1
  selector:
    app: gitea
    deploymentconfig: gitea
  strategy:
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: gitea
        deploymentconfig: gitea
    spec:
      serviceAccountName: gitea
      containers:
      - image: " "
        imagePullPolicy: Always
        name: gitea
        ports:
        - containerPort: 3000
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        volumeMounts:
        - name: labdroid-gitea-data
          mountPath: /gitea-repositories
        - name: labdroid-gitea-config
          mountPath: /home/gitea/conf
        readinessProbe:
            httpGet:
              path: /
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 5
            timeoutSeconds: 1
            periodSeconds: 20
            successThreshold: 1
            failureThreshold: 3
        livenessProbe:
            httpGet:
              path: /
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 30
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: labdroid-gitea-data
        persistentVolumeClaim:
          claimName: gitea-data-claim
      - name: labdroid-gitea-config
        secret:
          name: gitea-app-ini-secret
          items:
            - key: app.ini
              path: app.ini
  test: false
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - gitea
      from:
        kind: ImageStreamTag
        name: gitea:latest
    type: ImageChange
