gitea/deploymentconfig-postgresql.yaml
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    description: Defines how to deploy the database
  name: gitea-postgresql
  labels:
    app: gitea
spec:
  replicas: 1
  selector:
    name: gitea-postgresql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        name: gitea-postgresql
      name: gitea-postgresql
    spec:
      serviceAccountName: gitea
      containers:
      - env:
        - name: POSTGRESQL_USER
          value: ${DATABASE_USER}
        - name: POSTGRESQL_PASSWORD
          value: ${DATABASE_PASSWORD}
        - name: POSTGRESQL_DATABASE
          value: ${DATABASE_NAME}
        - name: POSTGRESQL_MAX_CONNECTIONS
          value: ${DATABASE_MAX_CONNECTIONS}
        - name: POSTGRESQL_SHARED_BUFFERS
          value: ${DATABASE_SHARED_BUFFERS}
        - name: POSTGRESQL_ADMIN_PASSWORD
          value: ${DATABASE_ADMIN_PASSWORD}
        image: registry.access.redhat.com/rhscl/postgresql-10-rhel7
        livenessProbe:
          initialDelaySeconds: 30
          tcpSocket:
            port: 5432
          timeoutSeconds: 1
        name: postgresql
	securityContext:
	  runAsUser: 1000560000
        ports:
        - containerPort: 5432
        readinessProbe:
          exec:
            command:
            - /bin/sh
            - -i
            - -c
            - psql -h 127.0.0.1 -U ${POSTGRESQL_USER} -q -d ${POSTGRESQL_DATABASE} -c 'SELECT 1'
          initialDelaySeconds: 5
          timeoutSeconds: 1
        resources:
          limits:
            memory: 512Mi
        volumeMounts:
        - mountPath: /var/lib/pgsql/data
          name: gitea-postgres-data
      volumes:
      - name: gitea-postgres-data
        persistentVolumeClaim:
          claimName: gitea-postgresql-data-claim
  triggers:
  - type: ConfigChange
