gitea/service-postgresql.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    description: Exposes the database server
  name: gitea-postgresql
spec:
  ports:
  - name: postgresql
    port: 5432
    targetPort: 5432
  selector:
    name: gitea-postgresql
