gitea/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    description: Route for application's http service.
  labels:
    app: gitea
  name: gitea
spec:
  host: gitea-labdroid.apps.ocp.labdroid.net
  to:            
    kind: Service
    name: gitea
    weight: 100
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: None
status:
  ingress:
    - conditions:
